changed styles to fix fonts on iOS on menus, fixed last commit vs osx.  fixes #13, fixes #12

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -393,6 +393,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
+	font-family: "Arial Black", Gadget, sans-serif;
 	float: right;
 	position: relative;
 	display: inline-block;
@@ -423,6 +424,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 /* For ADVANCED sub-menu */
 
 .advanced-dropdown {
+	font-family: "Arial Black", Gadget, sans-serif;
 	float: right;
 	position: relative;
 	display: inline-block;
